--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -250,8 +250,20 @@ box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);}
 .create_class button[type="submit"] {width:85px; margin-left:5px; background:#3f50e5; text-align: center; color:#fff; font-weight:600;}
 /* 선생님 - 클래스 삭제 */
 .delete_class .modal_head {background:url(../img/modal_classdel_ico.gif) no-repeat;}
+.delete_class .class_list_area {height:285px; overflow-x: hidden; overflow-y: auto; padding-right: 10px;}
+.delete_class .class_list_area::-webkit-scrollbar {
+	width: 5px;
+}
+.delete_class .class_list_area::-webkit-scrollbar-thumb {
+	background-color: #373a44;
+	border-radius: 10px;
+}
+.delete_class .class_list_area::-webkit-scrollbar-track {
+	background-color: #e1e1ea;
+	border-radius: 10px;
+}
 .delete_class .class_list_check {display: block;}
 .delete_class .class_list_check input[type="checkbox"] {display: none;}
-.delete_class .class_list_check input[type="checkbox"] + label {display: inline-block; width:350px; height:60px; line-height:55px; cursor: pointer; border-radius: 7px; border:1px solid #dbdbdb; box-sizing: border-box; transition-duration:0.3s; padding:0 20px; font-size: 15px; font-weight:600; color:#666; background:url(../img/classdel_check_off.gif) no-repeat 305px 50%; margin-bottom:7px;}
+.delete_class .class_list_check input[type="checkbox"] + label {display: inline-block; width:350px; height:60px; line-height:55px; cursor: pointer; border-radius: 7px; border:1px solid #dbdbdb; box-sizing: border-box; transition-duration:0.3s; padding:0 20px; font-size: 15px; font-weight:600; color:#666; background:url(../img/classdel_check_off.gif) no-repeat 305px 50%; margin:5px 0;}
 .delete_class .class_list_check input[type="checkbox"]:checked + label {background:#fffdf9; border:1px solid #f96c1e; color:#000; background:url(../img/classdel_check_on.gif) no-repeat 305px 50%;}
 .delete_class button[type="submit"] {width:350px; background:#f96c1e; color:#fff; text-align: center; height:50px; line-height:50px; margin-top:20px; font-weight:600;}
