--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -259,144 +259,152 @@ box-shadow: 3px 3px 10px 0px rgba(233,172,29,0.6);}
 .tch_class_list_table tbody td p.tch_test_state.start {background:#37d4a8 url(../img/tch_test_start_ico.gif) no-repeat 90px 50%;-webkit-box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);
 -moz-box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);
 box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);}
-.create_test_btn {width:100%; text-align: center; height:40px; line-height:40px;   border-radius:8px; cursor:pointer; font-size:13px; background:#6277f5; -webkit-box-shadow: 3px 3px 10px 0px rgba(98,119,245,0.6);
+.create_test_btn {display:inline-block; width:100%; text-align: center; height:40px; line-height:40px;   border-radius:8px; cursor:pointer; font-size:13px; background:#6277f5; -webkit-box-shadow: 3px 3px 10px 0px rgba(98,119,245,0.6);
 -moz-box-shadow: 3px 3px 10px 0px rgba(98,119,245,0.6);
 box-shadow: 3px 3px 10px 0px rgba(98,119,245,0.6);}
 .create_test_btn span {display: inline-block; background:#6277f5 url(../img/create_test_btn_ico.gif) no-repeat right 50%; color:#fff; padding-right:20px;}
 
 /* Teacher :: 시험생성 */
-.create_class_container {width:100%; text-align: center; background:url(../img/create_test_form_bg.jpg) no-repeat 50% 0px;}
+.create_class_container {width:100%;text-align: center;background:url(../img/create_test_form_bg.jpg) no-repeat 50% 0px;padding-bottom: 90px;}
 .create_class_container .form_contents {width:1200px; display:inline-block; text-align: left;}
-.test_name_form {width:100%; height:240px; overflow: hidden;}
-.field__input{
-  background-color: transparent;
-  border-radius: 0;
-  border: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  font-family: inherit;
-  font-size: inherit;
-  font-size: 38px;
-  color:#fff;
-  padding: 30px 5px;
-}
+.exam_name_form {margin:72px 0;}
+.exam_name_form input {width:100%; height:95px; line-height:95px; font-size:13px; background:none; border:none; outline:0; border-bottom:1px solid rgba(255, 255, 255, 0.5); font-size:48px; color:#fff; letter-spacing: -0.05em; box-sizing: border-box; background:url(../img/create_test_form_search.png) no-repeat left 50%; padding-left:70px;}
+.exam_name_form input::placeholder  {font-size:48px; color:#fff; font-weight:100; letter-spacing: -0.05em;}
+select {-webkit-appearance: none; -moz-appearance: none; -ms-appearance: none; appearance: none; outline: 0; box-shadow: none; border: 0 !important; background: #eef1f7; background-image: none;}
+select::-ms-expand {display: none;}
+/* Custom Select */
+.form_contents .select {position: relative;display: inline-block;height:45px;line-height: 45px;background: #eef1f7;overflow: hidden;border-radius: 5px;margin-left:5px;}
+.form_contents .select:first-child{margin-left:0;}
+.form_contents select {padding: 0 60px 0 20px;color: #152842;cursor: pointer;margin-top: -5px;font-size: 14px;height: 45px;font-weight: 600;}
+/* Arrow */
+.select::after {content:url( "../img/select_arrow.gif" ); position: absolute; top: -2px; right: 20px; background: #eef1f7; cursor: pointer; pointer-events: none; -webkit-transition: .6s all ease; -o-transition: .6s all ease; transition: .6s all ease;}
+/* Transition */
+.select:hover::after {content:url( "../img/select_arrow_on.gif" );}
+.test_width_input {width:100%;height:85px;line-height:85px;border-bottom:1px solid #e8ecf6;overflow: hidden;padding-top: 21px;box-sizing: border-box;}
+.test_width_input p.width_input_tit {float:left;width:215px;text-align:center;font-size:14px;color:#152842;font-weight:600;line-height: 45px;}
+.test_width_input .date_select {float:left;height:45px;line-height:45px; font-size:14px;color:#152842;padding:0 20px 0 60px;font-weight: 600;border-radius: 5px;margin-right: 5px; background:#eef1f7 url(../img/date_select_ico.gif) no-repeat 15px 50%;}
+.test_width_input .select_wrap {float:left; height:45px;line-height:45px; }
+.test_width_input span.bar {float:left;margin:0 5px;height: 45px;line-height: 45px;}
+.test_width_input .radio_wrap {line-height: 100%; float: left; margin-top: 15px;}
 
-.field{
-  --uiFieldBorderWidth: var(--fieldBorderWidth, 2px);
-  --uiFieldPaddingRight: var(--fieldPaddingRight, 1rem);
-  --uiFieldPaddingLeft: var(--fieldPaddingLeft, 1rem);
-  --uiFieldBorderColorActive: var(--fieldBorderColorActive, rgba(255, 255, 255, 1));
-  display: var(--fieldDisplay, inline-flex);
-  position: relative;
-  font-size:48px;
-  width: 100%;
-  color: #fff;
-  margin-top: 60px;
-  font-weight:100;
-}
-
-.field__input{
-  box-sizing: border-box;
-  width: var(--fieldWidth, 100%);
-  border-bottom: var(--uiFieldBorderWidth) solid var(--fieldBorderColor, rgba(255, 255, 255, 0.25));
-  padding-bottom:10px;
-}
-
-.field__input:focus{
-  outline: none;
-}
-
-.field__input::-webkit-input-placeholder{
-  opacity: 0;
-  transition: opacity .3s ease-out;
-}
-
-.field__input::-moz-placeholder{
-  opacity: 0;
-  transition: opacity .3s ease-out;
-}
-
-.field__input:focus::-webkit-input-placeholder{
-  opacity: 1;
-  transition-delay: .3s;
-}
-
-.field__input:focus::-moz-placeholder{
-  opacity: 1;
-  transition-delay: .3s;
-}
-
-.field__label-wrap{
-  box-sizing: border-box;
-  pointer-events: none;
-  cursor: text;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.field__label-wrap::after{
-  content: "";
-  box-sizing: border-box;
-  width: 100%;
-  height: 0;
-  opacity: 0;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.field__input:focus ~ .field__label-wrap::after{
-  opacity: 1;
-}
-
-.field__label{
-  position: absolute;
-  left:0;
-  top: calc(50% - .5em);
-  line-height: 1;
-  font-size: var(--fieldHintFontSize, inherit);
-  transition: top .3s cubic-bezier(0.9, -0.15, 0.1, 1.15), opacity .3s ease-out, font-size .3s ease-out;
-  will-change: bottom, opacity, font-size;
-  padding-left:70px;
-  background:url(../img/create_test_form_search.png) no-repeat 0 50%;
-}
-
-.field__input:focus ~ .field__label-wrap .field__label,
-.field__input:not(:placeholder-shown) ~ .field__label-wrap .field__label{
-  --fieldHintFontSize: var(--fieldHintFontSizeFocused, .35em);
-  top: var(--fieldHintTopHover, .1em);
-  left:5px;
-  padding-left:30px;
-  background-position: 0 50%;
-  background-size:16px;
-}
-.field_v1 .field__label-wrap::after{
-  border-bottom: var(--uiFieldBorderWidth) solid var(--uiFieldBorderColorActive);
-  transition: opacity .3s ease-out;
-  will-change: opacity;
-}
-.select_wrap{
+.radio_wrap .light {
+  --primary: #5e75ff;
+  --other:#152842;
+  background: #fff;
   display: inline-block;
+  line-height: 100%;
+}
+
+/* label */
+.radio_wrap label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  float: left;
+  margin-right: 20px;
+}
+
+/* input */
+.radio_wrap input {
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+
+/* .design */
+.radio_wrap .design {
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--other);
+  border-radius: 100%;
+  margin-right: 8px;
   position: relative;
 }
-.select_wrap:after{
-  content:'';
+
+.radio_wrap .design::before,
+.radio_wrap .design::after {
+  content: "";
   display: block;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
   position: absolute;
-  z-index: 1;
-  top: 50%;
-  right: 20px;
-  transform: translate(0,-50%);
-  width: 0;
-  height: 0;
-  border:10px solid red;
-  border-left:7px solid transparent;
-  border-right:7px solid transparent;
-  border-bottom:none;
+  transform: scale(0);
+  transform-origin: center center;
 }
+
+.radio_wrap .design:before {
+  background: var(--other);
+  opacity: 0;
+  transition: .3s;
+}
+
+.radio_wrap .design::after {
+  background: var(--primary);
+  opacity: .4;
+  transition: .6s;
+}
+
+/* .text */
+.radio_wrap .text {
+  color: var(--other);
+  font-weight: bold;
+  font-size: 14px;
+}
+
+/* checked state */
+.radio_wrap input:checked+ .design::before {
+  opacity: 1;
+  transform: scale(.6);
+}
+
+/* other states */
+.radio_wrap input:hover+.design,
+.radio_wrap input:focus+.design {
+  border: 1px solid var(--primary);
+}
+
+.radio_wrap input:hover+ .design:before,
+.radio_wrap input:focus+ .design:before {
+  background: var(--primary);
+}
+
+.radio_wrap input:hover~ .text {
+  color: var(--primary);
+}
+
+.radio_wrap input:focus+ .design::after,
+.radio_wrap input:active+ .design::after {
+  opacity: .1;
+  transform: scale(2.6);
+}
+
+.questions_list {display:inline-block; width: 100%; border-radius:10px; background: #eef1f7; margin-top:30px; padding:35px; box-sizing: border-box;}
+.questions_list p.tit {font-size:23px; font-weight:600; color:#152842;}
+.add_questions_btn {display:inline-block; margin-top:15px; border-radius:5px; background:#dce2ee; padding:15px 70px 15px 25px; font-size:15px; font-weight:600; color:#152842;}
+.add_questions_list {float:right; width:870px;}
+.add_questions_list .questions_box {display:inline-block; width:100%; background:#fff; border-radius: 5px; height:75px; line-height:75px; box-sizing: border-box; padding:0 40px; -webkit-box-shadow: 1px 1px 10px 1px rgba(206,214,232,0.6);
+-moz-box-shadow: 1px 1px 10px 1px rgba(206,214,232,0.6);
+box-shadow: 1px 1px 10px 1px rgba(206,214,232,0.6);}
+.add_questions_list .questions_box .tit {float:left;width: 420px;font-size:16px;color:#152842;text-align: center;}
+.add_questions_list .questions_box .score  {float:left; font-size:15px;}
+.add_questions_list .questions_box .score span {font-family: 'Roboto', sans-serif; font-size: 30px; font-weight:300;}
+.add_questions_list .questions_box .btn_wrap {float:right;}
+.add_questions_list .questions_box button {width:120px; box-sizing:border-box; cursor:pointer; display:inline-block; padding-left:15px; height:35px; line-height:35px; color:#fff; font-weight:600; border-radius:8px; text-align: left; margin-left:10px;}
+.add_questions_list .questions_box button.questions_modify {background:#37d4a8 url(../img/tch_test_start_ico.gif) no-repeat 90px 50%;-webkit-box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);
+-moz-box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);
+box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);}
+.add_questions_list .questions_box button.questions_delete {background:#fc5454;
+-webkit-box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);
+-moz-box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);
+box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);} 
+
+
 
 /* Teacher :: 생성된 시험이 없을 때 */
 .no_test_guide {width:100%; margin:30px 0 60px 0; padding-top:240px; background:url(../img/no_test_img.jpg) no-repeat 50% 0px; color:#232e3c; font-weight:200; text-align: center; font-size:25px;}
