--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -280,9 +280,9 @@ select::-ms-expand {display: none;}
 .select::after {content:url( "../img/select_arrow.gif" ); position: absolute; top: -2px; right: 20px; background: #eef1f7; cursor: pointer; pointer-events: none; -webkit-transition: .6s all ease; -o-transition: .6s all ease; transition: .6s all ease;}
 /* Transition */
 .select:hover::after {content:url( "../img/select_arrow_on.gif" );}
-.test_width_input {width:100%;height:85px;line-height:85px;border-bottom:1px solid #e8ecf6;overflow: hidden;padding-top: 21px;box-sizing: border-box;}
+.test_width_input {width:100%;/* height:85px; *//* line-height:85px; */border-bottom:1px solid #e8ecf6;overflow: hidden;padding: 20px 0;box-sizing: border-box;}
 .test_width_input p.width_input_tit {float:left;width:215px;text-align:center;font-size:14px;color:#152842;font-weight:600;line-height: 45px;}
-.test_width_input .date_select {float:left;height:45px;line-height:45px; font-size:14px;color:#152842;padding:0 20px 0 60px;font-weight: 600;border-radius: 5px;margin-right: 5px; background:#eef1f7 url(../img/date_select_ico.gif) no-repeat 15px 50%;}
+.test_width_input .date_select {float:left;height:45px;line-height:45px;font-size:14px;color:#152842;padding: 0 20px 0 60px;font-weight: 600;border-radius: 5px;margin-right: 5px;background: #eef1f7 url(../img/date_select_ico.gif) no-repeat 21px 50%;}
 .test_width_input .select_wrap {float:left; height:45px;line-height:45px; }
 .test_width_input span.bar {float:left;margin:0 5px;height: 45px;line-height: 45px;}
 .test_width_input .radio_wrap {line-height: 100%; float: left; margin-top: 15px;}
@@ -386,7 +386,8 @@ select::-ms-expand {display: none;}
 
 .questions_list {display:inline-block; width: 100%; border-radius:10px; background: #eef1f7; margin-top:30px; padding:35px; box-sizing: border-box;}
 .questions_list p.tit {font-size:23px; font-weight:600; color:#152842;}
-.add_questions_btn {display:inline-block; margin-top:15px; border-radius:5px; background:#dce2ee; padding:15px 70px 15px 25px; font-size:15px; font-weight:600; color:#152842;}
+.add_questions {float:left;}
+.add_questions_btn {cursor:pointer;display:inline-block;margin-top:15px;border-radius:5px;background: #dce2ee url(../img/add_questions_ico.gif) no-repeat 140px 50%;padding:15px 70px 15px 25px;font-size:15px;font-weight:600;color:#152842;}
 .add_questions_list {float:right; width:870px;}
 .add_questions_list .questions_box {display:inline-block; width:100%; background:#fff; border-radius: 5px; height:75px; line-height:75px; box-sizing: border-box; padding:0 40px; -webkit-box-shadow: 1px 1px 10px 1px rgba(206,214,232,0.6);
 -moz-box-shadow: 1px 1px 10px 1px rgba(206,214,232,0.6);
@@ -403,6 +404,48 @@ box-shadow: 3px 3px 10px 0px rgba(22,189,142,0.6);}
 -webkit-box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);
 -moz-box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);
 box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);} 
+
+/* Text Editor */
+.rdw-editor-main {
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
+  height: 300px !important;
+  border: 1px solid #dce2f1;
+  padding: 10px;
+}
+.rdw-editor-toolbar {
+  padding: 6px 5px 0;
+  border-radius: 2px;
+  border: 1px solid #dce2f1 !important;
+  display: flex;
+  justify-content: flex-start;
+  background: white;
+  flex-wrap: wrap;
+  font-size: 15px;
+  margin-bottom: 5px;
+  user-select: none;
+}
+.public-DraftStyleDefault-block {
+  margin: 1em 0;
+}
+.rdw-editor-wrapper:focus {
+  outline: none;
+}
+.rdw-editor-wrapper {
+  box-sizing: content-box;
+  width: 985px;
+  float: right;
+}
+.rdw-editor-main blockquote {
+  border-left: 5px solid #f1f1f1;
+  padding-left: 5px;
+}
+.rdw-editor-main pre {
+  background: #f1f1f1;
+  border-radius: 3px;
+  padding: 1px 10px;
+}
 
 
 
