--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -280,7 +280,7 @@ select::-ms-expand {display: none;}
 .select::after {content:url( "../img/select_arrow.gif" ); position: absolute; top: -2px; right: 20px; background: #eef1f7; cursor: pointer; pointer-events: none; -webkit-transition: .6s all ease; -o-transition: .6s all ease; transition: .6s all ease;}
 /* Transition */
 .select:hover::after {content:url( "../img/select_arrow_on.gif" );}
-.test_width_input {width:100%;/* height:85px; *//* line-height:85px; */border-bottom:1px solid #e8ecf6;overflow: hidden;padding: 20px 0;box-sizing: border-box;}
+.test_width_input {width:100%; border-bottom:1px solid #e8ecf6; display:inline-block; padding: 20px 0;box-sizing: border-box;}
 .test_width_input p.width_input_tit {float:left;width:215px;text-align:center;font-size:14px;color:#152842;font-weight:600;line-height: 45px;}
 .test_width_input .date_select {float:left;height:45px;line-height:45px;font-size:14px;color:#152842;padding: 0 20px 0 60px;font-weight: 600;border-radius: 5px;margin-right: 5px;background: #eef1f7 url(../img/date_select_ico.gif) no-repeat 21px 50%;}
 .test_width_input .select_wrap {float:left; height:45px;line-height:45px; }
@@ -426,7 +426,8 @@ box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);}
   width: 985px;
   float: right;
 }
-
+.react-date-picker {float:left;}
+.react-date-picker__wrapper {border:none !important;height: 45px;line-height: 45px;background: #eef1f7;font-weight: 600;padding: 0 15px 0 20px;border-radius: 5px;font-size: 14px;margin-right: 5px;}
 
 /* Teacher :: 생성된 시험이 없을 때 */
 .no_test_guide {width:100%; margin:30px 0 60px 0; padding-top:240px; background:url(../img/no_test_img.jpg) no-repeat 50% 0px; color:#232e3c; font-weight:200; text-align: center; font-size:25px;}
@@ -499,7 +500,7 @@ box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);}
 .create_problem p.tit {text-align: center;font-size: 20px;padding-top:95px;margin-bottom: 30px;background:url(../img/create_problem_ico.gif) no-repeat 50% 0px;}
 .create_problem input,
 .create_problem button {height:45px; line-height:45px; font-size:13px;}
-.create_problem label {float:left; font-size:14px; line-height:45px; width:75px; text-align:center; color:#152842; font-weight:600;}
+.create_problem label {float:left;font-size: 15px;line-height:45px;width:75px;text-align:center;color:#152842;font-weight:600;}
 .create_problem input[type="text"]::placeholder  {color:#a4a5b1; font-weight:500; letter-spacing: -0.05em;}
 .create_problem input[type="text"] {padding:0 15px;  border:1px solid #e5e5e5; border-radius: 5px;}
 .input_area {display:inline-block;}
@@ -511,7 +512,7 @@ box-shadow: 3px 3px 10px 0px rgba(242,71,71,0.6);}
 .create_problem .rdw-editor-main {height:190px !important;}
 .text_area {width:100%; overflow: hidden;}
 .text_area p {border-radius:5px;padding: 8px 0;font-weight: 600;background: #d5e1ff;color: #152842;text-align: center;margin: 10px 0 0px 0;font-size: 15px;}
-.text_area textarea {border-radius:5px; width:630px; margin-top: 5px; padding:10px; box-sizing: border-box; border:1px solid #e5e5e5;}
+.text_area textarea {outline:none; border-radius:5px; width:630px; margin-top: 5px; padding:10px; box-sizing: border-box; border:1px solid #e5e5e5;}
 
 .create_problem_area {height:500px; overflow-x: hidden; overflow-y: auto; padding-right: 10px;}
 .create_problem .create_problem_area::-webkit-scrollbar {
